--- a/visualizer/src/styles/optimizer.css
+++ b/visualizer/src/styles/optimizer.css
@@ -1,14 +1,20 @@
+.axis {
+    font-size: .9rem;
+    font-weight: 560;
+}
+
+/* optimization path and circles */
 .optimization-path {
-    stroke-width: 3;
+    stroke-width: 4;
     fill: none;
-    stroke-opacity: 0.01;
+    stroke-opacity: 0.0095;
     stroke: #000;
 }
 
 .circle {
-    r: 3.5;
-    stroke-opacity: 0.65;
-    stroke: black;
+    r: 5;
+    stroke-opacity: 0.7;
+    stroke: #000;
 }
 
 /* must have the same prefix as optimizer id: see optimizers.js */
