--- a/visualizer/src/styles/root.css
+++ b/visualizer/src/styles/root.css
@@ -185,33 +185,66 @@
     color: #fff;
     text-align: center;
     padding: 0.4em 0.5em;
-    border-radius: 0.25em 0.25em 0.25em 0;
 
     /* Position the tooltip text */
     position: absolute;
     display: block;
     z-index: 1;
-    bottom: 125%;
-    left: 50%;
 
     /* Fade in tooltip */
     opacity: 0;
     transition: opacity 0.3s;
 }
 
+.tooltip.top-left .tooltiptext {
+    bottom: 125%;
+    left: 50%;
+    border-radius: 0.25em 0.25em 0.25em 0;
+}
+
+.tooltip.top-right .tooltiptext {
+    bottom: 125%;
+    right: 50%;
+    border-radius: 0.25em 0.25em 0 0.25em;
+
+}
+
 /* Tooltip arrow */
 .tooltip .tooltiptext::after {
     content: "";
     position: absolute;
-    top: 100%;
-    left: 0;
     border-width: 2.5px;
     border-style: solid;
+}
+
+.tooltip.top-left .tooltiptext::after {
+    top: 100%;
+    left: 0;
     border-color: #555 transparent  transparent  #555;
+}
+
+.tooltip.top-right .tooltiptext::after {
+    top: 100%;
+    right: 0;
+    border-color: #555 #555  transparent  transparent;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 0.85;
+}
+
+.submenu {
+    width: 100%;
+}
+
+.submenu-title {
+    color: var(--control-border-color-focused);
+    text-transform: uppercase;
+    font-size: 0.85em;
+    font-family: "Times New Roman", Times, serif;
+    text-align: left;
+    padding: 0.5rem 1.5rem;
+    border-bottom: 2px solid var(--background-lighter);
 }
