--- a/visualizer/src/styles/root.css
+++ b/visualizer/src/styles/root.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #226aff;;
-    --primary-dark: #2e539d;
+    --primary: #42c0ff;
+    --primary-dark: #2798e3;
     --primary-comp: #ae2eff;
     --primary-comp-dark: #6f249d;
     --danger: #e96161;
@@ -16,7 +16,6 @@
     --white: #fafafa;
 
     --light-blue: #7fcff7;
-    --light-blue-dimmer: #27a4c7;
     --light-red: #ff2121;
 
     /* optimizers */
@@ -80,7 +79,6 @@
 
 .control {
     outline: none;
-    margin: 0 0 12px 0;
     box-sizing: border-box;
     width: 100%;
     font-size: 1rem;
@@ -114,6 +112,13 @@
 .control-invalid-hint {
     color: var(--control-invalid-color);
     padding: 0.3em;
+    width: 100%;
+    display: block;
+    text-align: left;
+}
+
+.control-invalid-hint.hidden {
+    visibility: hidden;
 }
 
 .control-disabled {
@@ -126,6 +131,9 @@
     cursor: not-allowed;
 }
 
+.control-wrapper {
+    margin-top: 10px;
+}
 
 .clickable {
     outline: none;
@@ -143,7 +151,7 @@
 
 .fill {
     --fill-color: var(--default);
-    --fill-color-dark: var(--default-dark);
+    --fill-color-active: var(--default-dark);
     border-color: var(--fill-color);
     background-color: var(--fill-color);
     color: var(--white);
@@ -151,51 +159,51 @@
 
 .fill:hover, 
 .fill:focus-visible {
-    background-color: var(--fill-color-dark);
+    background-color: var(--fill-color-active);
 }
 
 .fill.primary {
     --fill-color: var(--primary);
-    --fill-color-dark: var(--primary-dark);
+    --fill-color-active: var(--primary-dark);
 }
 
 .fill.primary-comp {
     --fill-color: var(--primary-comp);
-    --fill-color-dark: var(--primary-comp-dark);
+    --fill-color-active: var(--primary-comp-dark);
 }
 
 .fill.danger {
     --fill-color: var(--danger);
-    --fill-color-dark: var(--danger-dark);
+    --fill-color-active: var(--danger-dark);
 }
 
 
 .outline {
     --outline-color: var(--default);
-    --outline-color-dark: var(--default-dark);
+    --outline-color-active: var(--default-dark);
     border-color: var(--outline-color);
     color: var(--outline-color);
 }
 
 .outline:hover,
 .outline:focus-visible {
-    border-color: var(--outline-color-dark);
-    color: var(--outline-color-dark);
+    border-color: var(--outline-color-active);
+    color: var(--outline-color-active);
 }
 
 .outline.primary {
     --outline-color: var(--primary);
-    --outline-color-dark: var(--primary-dark);
+    --outline-color-active: var(--primary-dark);
 }
 
 .outline.primary-comp {
     --outline-color: var(--primary-comp);
-    --outline-color-dark: var(--primary-comp-dark);
+    --outline-color-active: var(--primary-comp-dark);
 }
 
 .outline.danger {
     --outline-color: var(--danger);
-    --outline-color-dark: var(--danger-dark);
+    --outline-color-active: var(--danger-dark);
 }
 
 
@@ -219,7 +227,7 @@
 
     /* Position the tooltip text */
     position: absolute;
-    display: block;
+    display: inline;
     z-index: 1;
 
     /* Fade in tooltip */
@@ -278,5 +286,15 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: left;
     padding: 0.5rem 1.5rem;
-    border-bottom: 2px solid var(--background-lighter);
 }
+
+a[target="_blank"]::after {
+    content: "";
+    background-image: url("@/assets/external-link-line.svg");
+    background-size: 0.95rem 0.95rem;
+    display: inline-block;
+    width: 0.95rem;
+    height: 0.95rem;
+    margin-bottom: -7px;
+}
+
